# narrative-director-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  code_quality.yml  formatter.yml  linux-ci.yml  mac-ci.yml  release.yml  rust.yml  windows-ci.yml
AudioProcessor/: Cargo.toml
TextGrabber/: Cargo.toml
TextGrabber/src/: lib.rs
VideoProcessor/: Cargo.toml
audio_processor/: Cargo.toml
docs/: design.md  pull_request_template.md  user-manual.md
docs/drawio_diagrams/: classdiagram.drawio  preferences_mock.drawio
docs/test_generation/: integration_tests.tsl  integration_tests.txt
src/: audio_processor.rs  main.rs  text_grabber.rs
src/audio/: audio_player.rs  audio_processor.rs  audio_recorder.rs  mod.rs  player.rs  recorder.rs  ui.rs
src/audio_processor/: audio_player.rs  audio_recorder.rs
src/media/: io.rs
src/media_io/: audio_player.rs  audio_processor.rs  audio_recorder.rs  mod.rs
src/resources/ui/: main-window.glade
src/session/: session.rs
src/sessions/: session.rs
src/text/: mod.rs  reader.rs  ui.rs  viewer.rs
src/ui/: app.rs  common.rs  main-window.glade  mod.rs  narrative_director.cmb.ui
src/ui/dialogs/: about.rs  goto.rs  mod.rs  preferences.rs
text_grabber/: Cargo.toml
text_grabber/src/: lib.rs
video_processor/: Cargo.toml
