[package]
name = "narrative-director-rs"
version = "0.1.0"
authors = ["Tyler Schmidt <tmschmid@protonmail.com>"]
edition = "2021"
license = "gpl-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(target_os = "linux")'.dependencies]
fltk = { version = "^1.3", features = ["use-wayland"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
fltk = "^1.3"

[dependencies]
cpal = "^0.14"
hound = "^3.4"
dirs = "^4.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "^1.0"

[dev-dependencies]
tempfile = "3"
