[package]
name = "narrative-director-rs"
version = "0.1.2"
authors = ["Tyler Schmidt <tmschmid@protonmail.com>"]
edition = "2021"
license = "gpl-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["use-wayland", "use-ninja"] }
cpal = "^0.15"
hound = "^3.5"
dirs = "^5.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "^1.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
embed-resource = "^2.2"
